<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Card 1: Countries -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/the_information_book_app"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:gravity="center"
        android:background="#8E24AA"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Card 1: Countries -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardCountries"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cardLeaders"
        app:layout_constraintWidth_percent="0.45">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="10dp">

            <ImageView
                android:layout_width="154dp"
                android:layout_height="90dp"
                android:contentDescription="@string/countries"
                android:src="@drawable/country" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:textSize="15sp"
                android:layout_marginTop="8dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Card 2: Leaders -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardLeaders"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toEndOf="@id/cardCountries"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.45">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="10dp">

            <ImageView
                android:layout_width="155dp"
                android:layout_height="90dp"
                android:contentDescription="@string/leaders"
                android:src="@drawable/leader" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leader"
                android:textSize="15sp"
                android:layout_marginTop="8dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Card 3: Museums -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardMuseums"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp"
        app:layout_constraintTop_toBottomOf="@id/cardCountries"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cardWonders"
        app:layout_constraintWidth_percent="0.45">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="10dp">

            <ImageView
                android:layout_width="156dp"
                android:layout_height="90dp"
                android:contentDescription="@string/museums"
                android:src="@drawable/museum" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/museum"
                android:textSize="15sp"
                android:layout_marginTop="8dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Card 4: Wonders -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardWonders"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp"
        app:layout_constraintTop_toBottomOf="@id/cardLeaders"
        app:layout_constraintStart_toEndOf="@id/cardMuseums"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.45">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="10dp">

            <ImageView
                android:layout_width="159dp"
                android:layout_height="90dp"
                android:contentDescription="@string/wonders"
                android:src="@drawable/wonder_of_world" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_7_wonders"
                android:textSize="15sp"
                android:layout_marginTop="8dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>